crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__return__in_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/return/in_method.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1)
      (method method [(local this @0)] []
         (block
            (return "ok")
            (print "bad"))))
   (print (call +2 (attr (call +2 (global Foo @1)) method))))

----- stderr -----
